--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-facebook-login": "^3.7.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
   },
