--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.0.0",
     "react-facebook-login": "^3.7.0",
     "react-router-dom": "^4.2.2",
+    "react-tooltip": "^3.4.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
   },
