--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-facebook-login": "^3.7.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-tooltip": "^3.4.0",
+    "redux": "^3.7.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
   },
