--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@types/redux": "^3.6.0",
     "chart.js": "^2.7.1",
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
