--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@types/redux": "^3.6.0",
+    "axios": "^0.17.1",
     "chart.js": "^2.7.1",
     "html-webpack-plugin": "^2.30.1",
+    "lodash": "^4.17.4",
     "path": "^0.12.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
