--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "debug": "node --nolazy --inspect-brk=9229 app.js"
+  },
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser-json": "^1.9.2",
