--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.7.1",
     "html-webpack-plugin": "^2.30.1",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "path": "^0.12.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
